--- a/invetory/inventoryApp/templates/login.html
+++ b/invetory/inventoryApp/templates/login.html
@@ -1,19 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-</head>
-<body>
-<div class="container mx-auto">
-  <div class="card bg-light text-dark">
-    <div class="card-body">Light card</div>
+{% extends "base.html" %}
+{% block title %} Login | inventoryApp {% endblock %}
+{% block content %}
+  <div class="container mx-auto mt-5"  style="width: 400px;">
+    <div class="card bg-light text-dark">
+      <div class="card-body">
+        {% if invalidcredential %}
+          <div class="alert alert-danger">
+              Invalid username or password.
+          </div>
+        {% endif%}
+        <form action="/inventoryApp/login/" method="POST">{% csrf_token %}
+          <div class="form-group">
+            <label for="userName">Username:</label>
+            <input type="text" class="form-control form-control-sm" id="userName" placeholder="Enter username" name="userName" required>
+          </div>
+          <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" class="form-control form-control-sm" id="password" placeholder="Enter password" name="password" required>
+          </div>
+          <button type="submit" class="btn btn-primary btn-sm">Login</button>
+          <a class="float-right" href="/inventoryApp/register/">Create new account</a>
+        </form>
+      </div>
+    </div>
   </div>
-</div>
-</body>
-</html>
+{% endblock %}
