--- a/invetory/inventoryApp/templates/base.html
+++ b/invetory/inventoryApp/templates/base.html
@@ -10,6 +10,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+  <div class="container">
     {% block content %}{% endblock %}
+  </div>
 </body>
 </html>
