--- a/invetory/inventoryApp/templates/login.html
+++ b/invetory/inventoryApp/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %} Login | inventoryApp {% endblock %}
 {% block content %}
-  <div class="container mx-auto mt-5"  style="width: 400px;">
+  <div class="mx-auto mt-5"  style="width: 400px;">
     <div class="card bg-light text-dark">
       <div class="card-body">
         {% if invalidcredential %}
