--- a/invetory/inventoryApp/templates/register.html
+++ b/invetory/inventoryApp/templates/register.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Register | inventoryApp {% endblock %}
+{% block title %} inventoryApp | Register {% endblock %}
 {% block content %}
 <div class="mx-auto mt-5" style="width: 400px;">
 	<div class="card bg-light text-dark">
@@ -9,7 +9,8 @@
               Username already exist.
           </div>
         {% endif%}
-			<form name="registration" onsubmit="registerUser(event,this.form)">{% csrf_token %}
+			<!-- <form name="registration" onsubmit="registerUser(event,this.form)">{% csrf_token %} -->
+			<form name="registration" action="/inventoryApp/register/" method="POST">{% csrf_token %}
 				<div class="form-group">
 					<label for="firstName">First name:</label>
 					<input type="text" class="form-control" id="firstName" placeholder="Enter first name" name="firstName"
@@ -28,18 +29,18 @@
 					<input type="password" class="form-control" id="password" placeholder="Enter password" name="password"
 						required>
 				</div>
-				<div class="form-group">
+				<!-- <div class="form-group">
 					<label for="password">Confirm password:</label>
 					<input type="password" class="form-control" id="password2" placeholder="Confirm password" name="password2"
 						required>
-				</div>
+				</div> -->
 					<button type="submit" class="btn btn-primary btn-block">Register</button>
 			</form>
 		</div>
 	</div>
 </div>
 <script>
-
+/*
 	function validateUser(event){
 		console.log(event.target.value.length);
 	}
@@ -47,8 +48,8 @@
 	function registerUser(event, form){
 		event.preventDefault();
 		console.log(event.target.password.value);
-		//console.log("Form",document.registration.userName);
 		return false;
 	}
+*/
 </script>
 {% endblock %}
