--- a/invetory/inventoryApp/templates/register.html
+++ b/invetory/inventoryApp/templates/register.html
@@ -6,23 +6,23 @@
 		<div class="card-body">
         {% if userExist %}
           <div class="alert alert-danger">
-              Username already exist.
+              user_name already exist.
           </div>
         {% endif%}
 			<!-- <form name="registration" onsubmit="registerUser(event,this.form)">{% csrf_token %} -->
 			<form name="registration" action="/inventoryApp/register/" method="POST">{% csrf_token %}
 				<div class="form-group">
-					<label for="firstName">First name:</label>
-					<input type="text" class="form-control" id="firstName" placeholder="Enter first name" name="firstName"
+					<label for="first_name">First name:</label>
+					<input type="text" class="form-control" id="first_name" placeholder="Enter first name" name="first_name"
 						required>
 				</div>
 				<div class="form-group">
-					<label for="lastName">Last name:</label>
-					<input type="text" class="form-control" id="lastName" placeholder="Enter last name" name="lastName" required>
+					<label for="last_name">Last name:</label>
+					<input type="text" class="form-control" id="last_name" placeholder="Enter last name" name="last_name" required>
 				</div>
 				<div class="form-group">
-					<label for="userName">username:</label>
-					<input type="text" class="form-control" id="userName" placeholder="Enter username" onblur="validateUser(event)" name="userName" required>
+					<label for="user_name">username:</label>
+					<input type="text" class="form-control" id="user_name" placeholder="Enter username" onblur="validateUser(event)" name="user_name" required>
 				</div>
 				<div class="form-group">
 					<label for="password">Password:</label>
