products on home page fetched

--- a/invetory/inventoryApp/templates/login.html
+++ b/invetory/inventoryApp/templates/login.html
@@ -16,8 +16,8 @@
         {% endif%}
         <form action="/inventoryApp/login/" method="POST">{% csrf_token %}
           <div class="form-group">
-            <label for="user_name">user_name:</label>
-            <input type="text" class="form-control form-control-sm" id="user_name" placeholder="Enter user_name" name="user_name" required>
+            <label for="user_name">username:</label>
+            <input type="text" class="form-control form-control-sm" id="user_name" placeholder="Enter username" name="user_name" required>
           </div>
           <div class="form-group">
             <label for="password">Password:</label>
