--- a/invetory/inventoryApp/templates/profile/admin/adminProfile.html
+++ b/invetory/inventoryApp/templates/profile/admin/adminProfile.html
@@ -1,4 +1,4 @@
-{% extends "../base.html" %}
+{% extends "../../base.html" %}
 {% block title %} inventoryApp | Admin {% endblock %}
 {% block content %}
 <div class="mx-auto mt-5">
@@ -15,7 +15,11 @@
 	<!-- Home div -->
 	<div class="tab-content" id="nav-tabContent">
 		<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-			{% block homeContent %}{% endblock %}
+			{% if productList %}
+				{% for product in productList%}
+					{{ product.product_name }} {{ product.quantity }}
+				{% endfor %}
+			{% endif %}
 		</div>
 
 		<!-- Add product div -->
