--- a/invetory/inventoryApp/templates/profile/user/userProfile.html
+++ b/invetory/inventoryApp/templates/profile/user/userProfile.html
@@ -79,8 +79,8 @@
 				'product_id': product_id,
 				'quantity': quantity
 			},
-			success: function (deptList) {
-				console.log(deptList)
+			success: function (response) {
+				console.log(response)
 				window.location.reload();
 			}
 		});
