--- a/invetory/inventoryApp/templates/login.html
+++ b/invetory/inventoryApp/templates/login.html
@@ -16,7 +16,7 @@
         {% endif%}
         <form action="/inventoryApp/login/" method="POST">{% csrf_token %}
           <div class="form-group">
-            <label for="user_name">username:</label>
+            <label for="user_name">Username:</label>
             <input type="text" class="form-control form-control-sm" id="user_name" placeholder="Enter username" name="user_name" required>
           </div>
           <div class="form-group">
