--- a/invetory/inventoryApp/templates/profile/admin/adminProfile.html
+++ b/invetory/inventoryApp/templates/profile/admin/adminProfile.html
@@ -2,14 +2,17 @@
 {% block title %} inventoryApp | Admin {% endblock %}
 {% block content %}
 <div class="mx-auto mt-5">
+	<div class="float-right">
+			<a  href="/inventoryApp/logoutUser/" class="btn btn-link">Logout</a>
+	</div>
 	<nav>
 		<div class="nav nav-tabs" id="nav-tab" role="tablist">
 			<a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab"
 				aria-controls="nav-home" aria-selected="true">Home</a>
 			<a class="nav-item nav-link" id="nav-addProduct-tab" data-toggle="tab" href="#nav-addProduct" role="tab"
 				aria-controls="nav-addProduct" aria-selected="false">Add Product</a>
-			<a class="nav-item nav-link" id="nav-updateProduct-tab" data-toggle="tab" href="#nav-updateProduct" role="tab"
-				aria-controls="nav-updateProduct" aria-selected="false">Update Product</a>
+			<!-- <a class="nav-item nav-link" id="nav-updateProduct-tab" data-toggle="tab" href="#nav-updateProduct" role="tab"
+				aria-controls="nav-updateProduct" aria-selected="false">Update Product</a> -->
 		</div>
 	</nav>
 	<!-- Home div -->
@@ -18,42 +21,42 @@
 			{% if productList %}
 			<table class="table table-hover">
 				<thead>
-				  <tr>
-					<th scope="col">Product Id</th>
-					<th scope="col">Name</th>
-					<th scope="col">Available Quantity</th>
-				  </tr>
+					<tr>
+						<th scope="col">Product Id</th>
+						<th scope="col">Name</th>
+						<th scope="col">Available Quantity</th>
+					</tr>
 				</thead>
 				<tbody>
-			{% for product in productList%}
-					  <tr id= "{{ product.product_id }}" >
+					{% for product in productList %}
+					<tr id="{{ product.product_id }}">
 						<td scope="row">{{ product.product_id }}</td>
 						<td>{{ product.product_name }}</td>
 						<td>{{ product.quantity }}</td>
-					  </tr>
-					  {% endfor %}
-					</tbody>
-				  </table>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
 			{% endif %}
 		</div>
 
 		<!-- Add product div -->
 		<div class="tab-pane fade" id="nav-addProduct" role="tabpanel" aria-labelledby="nav-addProduct-tab">
-				<div class="mx-auto mt-5" style="width: 400px;">
+			<div class="mx-auto mt-5" style="width: 400px;">
 				<div class="card bg-light text-dark">
 					<div class="card-body">
 						<form name="addProduct" action="/inventoryApp/productOperations/" method="POST">{% csrf_token %}
 							<div class="form-group">
 								<label for="product_name">Product name:</label>
-								<input type="text" class="form-control" id="product_name" placeholder="Enter Product name" name="product_name"
-									required>
+								<input type="text" class="form-control" id="product_name" placeholder="Enter Product name"
+									name="product_name" required>
 							</div>
 							<div class="form-group">
 								<label for="quantity">Quantity:</label>
-								<input type="Number" class="form-control" value=10 id="quantity" placeholder="Enter quantity" name="quantity"
-									required>
+								<input type="Number" class="form-control" value=10 id="quantity" placeholder="Enter quantity"
+									name="quantity" required>
 							</div>
-								<button type="submit" class="btn btn-primary btn-block">Add product</button>
+							<button type="submit" class="btn btn-primary btn-block">Add product</button>
 						</form>
 					</div>
 				</div>
@@ -61,9 +64,8 @@
 		</div>
 
 		<!-- Update Product div -->
-		<div class="tab-pane fade" id="nav-updateProduct" role="tabpanel" aria-labelledby="nav-updateProduct-tab">
-			{% block updateProduct %}{% endblock %}
-		</div>
+		<!-- <div class="tab-pane fade" id="nav-updateProduct" role="tabpanel" aria-labelledby="nav-updateProduct-tab">
+		</div> -->
 	</div>
 </div>
 {% endblock %}
